@startuml
!theme cerulean-outline
skinparam backgroundColor #FFFFFF

class User {
    +id: int
    +lastname: string
    +firstname: string
    +email: string
    +password: string
    +role: UserRole
    +created_at: datetime
    +updated_at: datetime
    +authenticate(email: string, password: string): bool
}

enum UserRole {
    ADMIN
    EMPLOYEE
    VET
    VISITOR
}

class Service {
    +id: int
    +name: string
    +slug: string
    +description: text
    +created_at: datetime
    +updated_at: datetime
}

class OpeningHour {
    +id: int
    +day: string
    +opening_time: string
    +closing_time: string
}

class Habitat {
    +id: int
    +name: string
    +slug: string
    +description: text
    +state: string
    +comment: text
    +created_at: datetime
    +updated_at: datetime
}

class Animal {
    +id: int
    +name: string
    +slug: string
    +nickname: string
    +classification: string
    +area: string
    +description: text
    +consultation_count: int
    +created_at: datetime
    +updated_at: datetime
}

class Testimonial {
    +id: int
    +pseudo: string
    +content: string
    +is_visible: bool
    +created_at: datetime
    +updated_at: datetime
}

class Image {
    +id: int
    +name: string
    +slug: string
    +description: string
    +priority: int
    +path: string
    +size: int
    +created_at: datetime
    +updated_at: datetime
}

class VetReport {
    +id: int
    +content: text
    +created_at: datetime
    +updated_at: datetime
}

class FoodConsumption {
    +id: int
    +food: string
    +quantity: int
    +created_at: datetime
    +updated_at: datetime
}

User "1" -|> UserRole : a_role
Habitat "1" -- "0..*" Animal : > possede
User "1" -- "0..*" VetReport : > redige
Animal "1" -- "0..*" VetReport : > detient
Habitat "1" -- "0..*" Image : > possede
Animal "1" - "0..*" Image : > possede
User "1" -- "0..*" Image : > possede
User "1" -- "0..*" Service : > gere
User "1" -- "0..*" OpeningHour : > gere
User "1" -- "0..*" Habitat : > gere
User "1" -- "0..*" Animal : > gere
User "1" -- "0..*" Testimonial : > valider_invalider
Animal "1" -- "0..*" FoodConsumption : > consomme
User "1" -- "0..*" FoodConsumption : > enregistrer
User "1" -- "0..*" Habitat : > commenter

@enduml
